other fixes to vignettes following checks
Former-commit-id: b5949eb8e387093427fc60b0a17d30e9d85bbda9 [formerly aeca7858350f1ba3603d39aed29ee53a60c6e0c1]
Former-commit-id: 0b1df69241000cd88a912d0a5555c32affd69f1d
Former-commit-id: 52af0b74fa2cc26d670d5e56b3c5fed458d1e1b5
Former-commit-id: 5b32b106880b37040ebbecf5b00f3b826a85c642
Former-commit-id: d9215fe97881af0e6299fcfec1b7526410888e02 [formerly 3d5167958809eb92aa1431c841cad0a00168a9d0]
Former-commit-id: b198f01712f62e8a65b8bf6f1d3fe0ebdc696b70
Former-commit-id: 3b0dc9399aabc5f3ce5c482f9fc20d704d8f67d7

--- a/vignettes/vignette_campp2.Rmd
+++ b/vignettes/vignette_campp2.Rmd
@@ -234,7 +234,7 @@ To install the CAMPP2 package from Bioconductor, you need to follow these steps:
 1. Install the Bioconductor package manager, BiocManager, if you don't have it already. 
 You can do this by running the following command in your R console:
 
-```{r, eval = TRUE}
+```{r, eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE))
     install.packages("BiocManager")
 ```
@@ -394,7 +394,6 @@ n<-nrow(campp2_brca_1)
 # For testing of this function, 1000 genes is assegned with NA value. NA values are introduced randomly into each sample and all the 10000 genes (n=10000) are considered for the introduction of NA values.
 
 campp2_brca_1_NAs<-apply (campp2_brca_1, 2, function(x) {x[sample( c(1:n), floor(n/10))] <- NA; x} )
-``` 
 
 # create an object with replaced NAs; features having "NA" in more than 70% of the samples will be removed; samples having "NA" in more than 80% of the genes will be removed
 
@@ -516,8 +515,8 @@ As results, multiple plots are obtained for each feature:
 1) Cullen and Frey graph
 2) Histogram and theoretical densities
 3) Empirical and theoretical CDFs
-4) Q-Q plot
-5) P-P plot
+4) QQ plot
+5) PP plot
 
 For some of the figures, plotted distributions depends on the characteristics
 of the input data:
@@ -542,8 +541,8 @@ a .pdf file including multiple plots:
 1) Cullen and Frey graph
 2) Histogram and theoretical densities
 3) Empirical and theoretical CDFs
-4) Q-Q plot
-5) P-P plot
+4) QQ plot
+5) PP plot
 
 **An example run:** \
 
@@ -1594,7 +1593,7 @@ Pipeline (CAMPP)—A standardized framework for the analysis of
 quantitative biological data." _PLOS Computational Biology_, *16(3)*.
 
 # Session Information
-```{r sessionInfo}
+```{r, eval = TRUE}
 sessionInfo()
 ```
 
